@@ -1,4 +1,6 @@
 pixmaps = \
+  astrometry.png \
+  astrometry_dark.png \
 	b.png \
 	chain.png \
 	cm.png \
