@@ -131,6 +131,8 @@ static void update_theme_button(const gchar *button_name, const gchar *path) {
 static void update_icons_to_theme(gboolean is_dark) {
 	siril_debug_print("Loading %s theme...\n", is_dark ? "dark" : "light");
 	if (is_dark) {
+		update_theme_button("annotate_button", "astrometry_dark.png");
+
 		update_theme_button("rotate90_anticlock_button", "rotate-acw_dark.png");
 		update_theme_button("rotate90_clock_button", "rotate-cw_dark.png");
 		update_theme_button("mirrorx_button", "mirrorx_dark.png");
@@ -142,6 +144,8 @@ static void update_icons_to_theme(gboolean is_dark) {
 
 		update_theme_button("histoToolAutoStretch", "mtf_dark.png");
 	} else {
+		update_theme_button("annotate_button", "astrometry.png");
+
 		update_theme_button("rotate90_anticlock_button", "rotate-acw.png");
 		update_theme_button("rotate90_clock_button", "rotate-cw.png");
 		update_theme_button("mirrorx_button", "mirrorx.png");
